# jbzip2

./: .gitignore  Cargo.toml  README.md  bench.md  results.json  results.txt  test.json
benches/: decompress.sh  decompress_and_jq.sh  decompress_and_json.sh  decompress_and_json_results.md  decompress_and_json_results_1.md  decompress_and_json_results_10.md  decompress_and_json_results_100.md  decompress_and_json_results_100_000.md  decompress_and_json_results_10_000.md  decompress_and_json_results_1_000.md  decompress_results_1.md  decompress_results_10.md  decompress_results_100.md  decompress_results_100_000.md  decompress_results_10_000.md  decompress_results_1_000.md  decompress_results_1_000_000.md  full_results.md  jbzip2-shell  jq_test.sh  json.sh  json_only.sh  json_only_results.bak.md  json_only_results_24gb_1,.md  json_only_results_24gb_1.md  json_only_results_24gb_10,.md  json_only_results_24gb_10.md  json_only_results_24gb_100,.md  json_only_results_24gb_100.md  json_only_results_24gb_100_000,.md  json_only_results_24gb_100_000.md  json_only_results_24gb_10_000,.md  json_only_results_24gb_10_000.md  json_only_results_24gb_1_000,.md  json_only_results_24gb_1_000.md  json_only_results_24gb_1_000_000.md  json_only_results_8gb_1.md  json_only_results_8gb_10.md  json_only_results_8gb_100.md  json_only_results_8gb_100_000.md  (+22 more)
examples/: 10.json  10.jsonl
samples/: output.txt
src/: lib.rs  main.rs
tests/: 1.expected.txt  1.json  1.json.bak  1.json.bz2  10.expected.txt  10.json.bz2  100.expected.txt  100.json.bz2  cli.rs  george.expected.txt  george.json  (+8 more)
(+1 files in other folders)
