[package]
name = "jbzip2"
version = "0.0.1"
edition = "2021"

[dependencies]
bzip2 = "0.4.3"
clap = { version = "3.0", features = ["derive"] }
env_logger = "0.9.3"
indicatif = "0.16.2"
jq-rs = { version = "0.4.1", features = ["bundled"] }
log = "0.4.0"
rstest = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simdutf8 = { version = "0.1.3" }
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["full"] }

