[package]
name = "jbzip2"
version = "0.0.1"
edition = "2021"

[dependencies]
bzip2 = "0.4.4"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
simdutf8 = { version = "0.1.4" }
tokio = { version = "1.37.0", features = ["full"] }

[dev_dependencies]
rstest = "0.17.0"
